# Automation-E2E-Appium-with-BDD

./: .gitignore  README.md  behave.ini  pretty.output  pyproject.toml  requirements.txt
tests/config/: capabilities.py  settings.py
tests/features/: environment.py
tests/features/login/: autenticacao.feature
tests/features/steps/: autenticacao.py
tests/locators/login/: autenticacao.py
tests/pages/: common_functions.py
tests/pages/login/: login_page.py
utils/: driver_factory.py  logger.py
utils/cache/: nodeids
